--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,11 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "^1.6.4",
+    "moment": "^2.18.1",
+    "countdownjs": "^2.6.0",
+    "lodash": "^4.17.4"
+  }
 }
