--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "color": "^1.0.3",
     "ect": "^0.5.9",
     "express": "^4.14.0",
-    "lodash": "^4.17.2",
-    "moment": "^2.17.1"
+    "grunt-yaml": "^0.4.2",
+    "js-yaml": "^3.8.3",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
