--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "moment": "^2.18.1",
     "countdownjs": "^2.6.0",
     "lodash": "^4.17.4",
-    "flag-icon-css": "^2.8.0"
+    "flag-icon-css": "^2.8.0",
+    "uikit": "^2.27.2"
   },
   "devDependencies": {}
 }
